# print_file

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  schemas.py  utils.py
src/api/v1/: dependincies.py  endpoints.py  utils.py
src/core/: celery_conf.py  config.py
src/worker/: __init__.py  tasks.py
