[project]
name = "test-work"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr",email = "oleksandr.hnylosyr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
